modified calibration file to write to config after s key pressed

--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,16 @@
 {
-    "video" : null,
+    "video": null,
     "buffer": 64,
-    "color" : {
-                "upper": [64,255,255],
-                "lower": [29, 86,  6]
-              }
+    "color": {
+        "upper": [
+            255,
+            255,
+            255
+        ],
+        "lower": [
+            0,
+            56,
+            19
+        ]
+    }
 }
